--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -6,15 +6,20 @@ block contenido
             spa.font-normal Raices
         h2.text-center.text-3xl.font-extrabold= page
 
+        if errors
+            div(class="max-w-md mx-auto my-10")
+                each error in errors
+                    p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold.rounded= error.msg
+
         div.mt-8.mx-auto.max-w-md
             div.bg-white.py-8.px-4.shadow.rounded-md
                 form.space-y-5(method="POST" action="/auth/register")
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Nombre
-                        input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Nombre" type="text" name="nombre")
+                        input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Nombre" type="text" name="nombre" value=usuario ? usuario.nombre : '')
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de registro
-                        input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Email" type="email" name="email")
+                        input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Email" type="email" name="email" value=usuario ? usuario.email : '')
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Contraseña
                         input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Contraseña" type="password" name="password")
