--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -2,7 +2,7 @@ extends ../layouts/index
 
 block contenido
     div.py-5 
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
+        h1.text-4xl.my-5.font-extrabold.text-center Bienes
             spa.font-normal Raices
         h2.text-center.text-3xl.font-extrabold= page
 
@@ -13,7 +13,8 @@ block contenido
 
         div.mt-8.mx-auto.max-w-md
             div.bg-white.py-8.px-4.shadow.rounded-md
-                form.space-y-5(method="POST" action="/auth/register")
+                form.space-y-5(method="POST" action="/auth/register" noValidate)
+                    input(type="hidden" name="_csrf" value= csrfToken)
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Nombre
                         input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Nombre" type="text" name="nombre" value=usuario ? usuario.nombre : '')
