--- a/views/layouts/index.pug
+++ b/views/layouts/index.pug
@@ -2,10 +2,13 @@ doctype html
 html(lang="es")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Bienes Raices | #{page}
-        link(rel="stylesheet", href="/css/app.css")
+        link(rel="stylesheet" href="/css/app.css")
     body(class="min-h-screen bg-gray-50")
+        
+        if bar
+            include header
 
         main(class="mx-auto container mt-10 px-2")
             block contenido
