--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -1,5 +1,8 @@
 extends ../layouts/index
 
+block styles
+    link(rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
+
 block contenido
     div.py-5 
         h1.text-4xl.my-10.font-extrabold.text-center Bienes
@@ -8,9 +11,61 @@ block contenido
 
         div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
             form.space-y-8
-                div.space-y-8
+                div.space-y-5
                     h3.text-lg.leading-6.font-medium.text-gray-900 Información General 
                     p.text-gray-600 Añade información sobre la propiedad en venta
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Titulo de Anuncio
                         input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad, ej. Casa en la playa" type="text" name="titulo")
+                    div
+                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="descripcion") Descripción
+                        textarea#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripción de la propiedad" name="descripcion")
+
+                    div(class="md:flex md:gap-4 space-y-5 md:space-y-0") 
+                        div(class="md:w-1/2")  
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="categoria") Categoria
+                            select#categoria.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
+                                option(value="") - Seleccione -
+                        div(class="md:w-1/2")  
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
+                            select#precio.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
+                                option(value="") - Seleccione -
+                    div(class="md:flex md:gap-4 space-y-5 md:space-y-0") 
+                        div(class="md:w-1/3")  
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="habitaciones") Habitaciones
+                            select#habitaciones.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="habitaciones")
+                                option(value="") - Seleccione -
+                                - let hab = 1;
+                                    while hab < 10
+                                        option(value=hab) #{hab++} 
+                        div(class="md:w-1/3")  
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamiento") Estacionamiento
+                            select#estacionamiento.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="estacionamiento")
+                                option(value="") - Seleccione -
+                                - let est = 1;
+                                    while est < 6
+                                        option(value=est) #{est++} 
+                        div(class="md:w-1/3")  
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="banos") Baños
+                            select#banos.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="banos")
+                                option(value="") - Seleccione -
+                                - let wc = 1;
+                                    while wc < 6
+                                        option(value=wc) #{wc++} 
+                    div.border-gray-200.border-t.space-y-5
+                        h3.text-lg.leading-6.font-medium.text-gray-900 Ubicación
+                        p.text-gray-600 Ubica la propiedad en el mapa
+                        #mapa.h-96
+
+                        div 
+                            p.calle 
+
+                        input(type="hidden" name="calle" id="calle")
+                        input(type="hidden" name="lat" id="lat")
+                        input(type="hidden" name="lng" id="lng")
+block scripts
+    script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
+    script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
+    script(src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geosearch/2.7.0/bundle.min.js")
+    script(src="/js/map.js")
