--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -9,8 +9,14 @@ block contenido
             spa.font-normal Raices
         h2.text-center.text-3xl.font-extrabold= page
 
+        if errors
+            div(class="max-w-md mx-auto my-10")
+                each error in errors
+                    p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold.rounded= error.msg
+
         div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-            form.space-y-8
+            form.space-y-8(method="POST" action="/properties/create")
+                input(type="hidden" name="_csrf" value= csrfToken)
                 div.space-y-5
                     h3.text-lg.leading-6.font-medium.text-gray-900 Información General 
                     p.text-gray-600 Añade información sobre la propiedad en venta
@@ -26,10 +32,14 @@ block contenido
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="categoria") Categoria
                             select#categoria.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
                                 option(value="") - Seleccione -
+                                each categoria in categorias 
+                                    option(value=categoria.id)= categoria.name
                         div(class="md:w-1/2")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
                             select#precio.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
                                 option(value="") - Seleccione -
+                                each precio in precios 
+                                    option(value=precio.id)= precio.name
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0") 
                         div(class="md:w-1/3")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="habitaciones") Habitaciones
@@ -63,6 +73,8 @@ block contenido
                         input(type="hidden" name="calle" id="calle")
                         input(type="hidden" name="lat" id="lat")
                         input(type="hidden" name="lng" id="lng")
+
+                    input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Añadir Imagen")                        
 block scripts
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
     script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
