--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -1,4 +1,4 @@
-extends ../layouts/index
+extends ../layouts/admin
 
 block styles
     link(rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
@@ -22,10 +22,10 @@ block contenido
                     p.text-gray-600 Añade información sobre la propiedad en venta
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Titulo de Anuncio
-                        input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad, ej. Casa en la playa" type="text" name="titulo")
+                        input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad, ej. Casa en la playa" type="text" name="titulo" value= datos.titulo ? datos.titulo : '')
                     div
                         label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="descripcion") Descripción
-                        textarea#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripción de la propiedad" name="descripcion")
+                        textarea#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripción de la propiedad" name="descripcion")= datos.descripcion ? datos.descripcion : '' 
 
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0") 
                         div(class="md:w-1/2")  
@@ -33,13 +33,13 @@ block contenido
                             select#categoria.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
                                 option(value="") - Seleccione -
                                 each categoria in categorias 
-                                    option(value=categoria.id)= categoria.name
+                                    option(value=categoria.id selected= datos.categoria ? datos.categoria == categoria.id ? true : false : null)= categoria.name
                         div(class="md:w-1/2")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
                             select#precio.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
                                 option(value="") - Seleccione -
                                 each precio in precios 
-                                    option(value=precio.id)= precio.name
+                                    option(value=precio.id selected= datos.precio ? datos.precio == precio.id ? true : false : null)= precio.name
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0") 
                         div(class="md:w-1/3")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="habitaciones") Habitaciones
@@ -47,32 +47,32 @@ block contenido
                                 option(value="") - Seleccione -
                                 - let hab = 1;
                                     while hab < 10
-                                        option(value=hab) #{hab++} 
+                                        option(value=hab selected= datos.habitaciones ? datos.habitaciones == hab ? true : false : null) #{hab++} 
                         div(class="md:w-1/3")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamiento") Estacionamiento
                             select#estacionamiento.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="estacionamiento")
                                 option(value="") - Seleccione -
                                 - let est = 1;
                                     while est < 6
-                                        option(value=est) #{est++} 
+                                        option(value=est selected= datos.estacionamiento ? datos.estacionamiento == est ? true : false : null) #{est++} 
                         div(class="md:w-1/3")  
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="banos") Baños
                             select#banos.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="banos")
                                 option(value="") - Seleccione -
                                 - let wc = 1;
                                     while wc < 6
-                                        option(value=wc) #{wc++} 
+                                        option(value=wc selected= datos.banos ? datos.banos == wc ? true : false : null) #{wc++} 
                     div.border-gray-200.border-t.space-y-5
                         h3.text-lg.leading-6.font-medium.text-gray-900 Ubicación
                         p.text-gray-600 Ubica la propiedad en el mapa
                         #mapa.h-96
 
                         div 
-                            p.calle 
+                            p.calle= datos.calle ? datos.calle : '' 
 
-                        input(type="hidden" name="calle" id="calle")
-                        input(type="hidden" name="lat" id="lat")
-                        input(type="hidden" name="lng" id="lng")
+                        input(type="hidden" name="calle" id="calle" value= datos.calle ? datos.calle : '')
+                        input(type="hidden" name="lat" id="lat" value= datos.lat ? datos.lat : '')
+                        input(type="hidden" name="lng" id="lng" value= datos.lng ? datos.lng : '')
 
                     input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Añadir Imagen")                        
 block scripts
