--- a/views/properties/admin.pug
+++ b/views/properties/admin.pug
@@ -20,7 +20,7 @@ block contenido
                                 div(class="sm:w-1/4 md:w-1/6") 
                                     img(src=`uploads/${propertie.imagen}`, alt=`Imagen propertie ${propertie.title}`)
                                 div(class="sm:w-2/4 md:w-3/6 lg:w-4/6 space-y-3") 
-                                    a(class="block text-2xl font-extrabold text-indigo-600 truncate" href="#")= propertie.title
+                                    a(class="block text-2xl font-extrabold text-indigo-600 truncate" href=`/properties/${propertie.id}`)= propertie.title
 
                                     p(class="text-sm text-black font-bold")= propertie.categoria.name
 
@@ -33,9 +33,10 @@ block contenido
                                 div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col lg:flex-row gap-2") 
                                     form(action="#")
                                         input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded w-full  ${propertie.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}` value=`${propertie.publicado ? 'Publicado' : 'No publicado'}`)
-                                    a(href="#" class="cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-indigo-100 text-indigo-800 text-center") Editar
+                                    a(href=`/properties/edit/${propertie.id}` class="cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-indigo-100 text-indigo-800 text-center") Editar
 
-                                    form(action="#")
+                                    form(method="POST" action=`/properties/delete/${propertie.id}`)
+                                        input(type="hidden" name="_csrf" value= csrfToken)
                                         input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-red-100 text-red-800 w-full` value=`Eliminar`)
 
         else 
