--- a/views/properties/admin.pug
+++ b/views/properties/admin.pug
@@ -6,7 +6,7 @@ block contenido
             spa.font-normal Raices
         h2.text-center.text-3xl.font-extrabold= page
 
-        a(href="/properties/create" class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Publicar propiedad 
+        a(href="/properties/create" class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto shadow-md") Publicar propiedad 
 
         //- pre= JSON.stringify(properties, undefined, 2)
 
@@ -32,12 +32,27 @@ block contenido
 
                                 div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col lg:flex-row gap-2") 
                                     form(action="#")
-                                        input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded w-full  ${propertie.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}` value=`${propertie.publicado ? 'Publicado' : 'No publicado'}`)
-                                    a(href=`/properties/edit/${propertie.id}` class="cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-indigo-100 text-indigo-800 text-center") Editar
+                                        input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded w-full  ${propertie.publicado ? 'bg-green-100 text-green-800 shadow-md' : 'bg-yellow-100 text-yellow-800 shadow-md'}` value=`${propertie.publicado ? 'Publicado' : 'No publicado'}`)
+                                    a(href=`/properties/edit/${propertie.id}` class="cursor-pointer shadow-md px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-indigo-100 text-indigo-800 text-center") Editar
 
                                     form(method="POST" action=`/properties/delete/${propertie.id}`)
                                         input(type="hidden" name="_csrf" value= csrfToken)
-                                        input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-red-100 text-red-800 w-full` value=`Eliminar`)
+                                        input(type="submit" class=`cursor-pointer shadow-md px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-red-100 text-red-800 w-full` value=`Eliminar`)
+                div(class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6")
+                    div(class="flex-1 flex justify-between sm:hidden")
+                        a(href=`/my-properties?page=${actualPage - 1}` class=`${actualPage == "1" ? 'pointer-events-none' : ''} relative inline-flex items-center px-4 py-2 border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50`) Anterior
+                        a(href=`/my-properties?page=${actualPage + 1}` class=`${actualPage == pages ? 'pointer-events-none' : ''} relative inline-flex items-center px-4 py-2 border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50`) Siguiente
 
+                    div(class="hidden sm:flex-1 sm:flex sm:items-center sm: justify-between")
+                        p(class="text-sm text-gray-700 gap-2") Propiedades registradas: 
+                            span(class="font-medium") #{offset + 1} -  
+                            span(class="font-medium") #{total < limit + offset ? total : limit + offset} de 
+                            span(class="font-medium") #{total} resultados
+
+                    div(class="hidden sm:block")     
+                        nav(class="relative z-0 inline-flex rounded-md shadow-md") 
+                            - var n = 1;
+                                while n <= pages
+                                    a(class=`${actualPage == n ? 'bg-indigo-50 border-indigo-500 text-indigo-600': 'bg-white border-gray-300 text-gray-500 hover:bg-gray-50'} relative inline-flex items-center px-4 py-2 border text-sm font-medium` href=`/my-properties?page=${n}`) #{n++}
         else 
             p.text-center No hay propiedades
