--- a/views/layouts/includes/header-admin.pug
+++ b/views/layouts/includes/header-admin.pug
@@ -1,4 +1,4 @@
-header.bg-indigo-600.p-4 
+header.bg-blue-600.p-4 
         .container.mx-auto.flex.justify-between.items-center
             h1.text-2xl.text-white.font-extrabold.text-center Bienes
                 span.font-normal Raices
@@ -6,4 +6,4 @@ header.bg-indigo-600.p-4
             nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
                 a(href="") Mis propiedades
                 a(href="") Mi perfil
-                a(class="bg-indigo-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
+                a(class="bg-blue-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
