--- a/views/layouts/includes/header-app.pug
+++ b/views/layouts/includes/header-app.pug
@@ -1,9 +1,16 @@
-header.bg-indigo-600.p-4 
+header.bg-blue-600.p-4 
         .container.mx-auto.flex.justify-between.items-center
             h1.text-2xl.text-white.font-extrabold.text-center Bienes
                 span.font-normal Raices
 
             nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
-                a(href="") Mis propiedades
-                a(href="") Mi perfil
-                a(class="bg-indigo-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
+                a(href="/auth/register") Crear Cuenta
+                a(href="/auth/login") Iniciar Sesión
+
+div(class="bg-blue-700 py-5 hidden lg:block")
+    div(class="container mx-auto flex justify-between")
+        a(href="/categorias/1" class="text-sm font-bold uppercase text-white") Casas
+        a(href="/categorias/2" class="text-sm font-bold uppercase text-white") Departamentos
+        a(href="/categorias/3" class="text-sm font-bold uppercase text-white") Bodegas
+        a(href="/categorias/4" class="text-sm font-bold uppercase text-white") Terrenos
+        a(href="/categorias/5" class="text-sm font-bold uppercase text-white") Fincas
