--- a/views/properties/add-image.pug
+++ b/views/properties/add-image.pug
@@ -14,6 +14,6 @@ block contenido
                 input(type="hidden" name="_csrf" value= csrfToken)
                 
 
-            button(id="publicar" class="mt-5 w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit") Publicar Propiedad
+            button(id="publicar" class="mt-5 w-full py-3 bg-blue-600 hover:bg-blue-700 rounded text-white font-bold uppercase cursor-pointer" type="submit") Publicar Propiedad
 block scripts
     script(src="/js/addImage.js")
