--- a/views/properties/admin.pug
+++ b/views/properties/admin.pug
@@ -6,7 +6,7 @@ block contenido
             spa.font-normal Raices
         h2.text-center.text-3xl.font-extrabold= page
 
-        a(href="/properties/create" class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto shadow-md") Publicar propiedad 
+        a(href="/properties/create" class="rounded py-2 px-10 bg-blue-600 hover:bg-blue-700 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto shadow-md") Publicar propiedad 
 
         //- pre= JSON.stringify(properties, undefined, 2)
 
@@ -20,7 +20,7 @@ block contenido
                                 div(class="sm:w-1/4 md:w-1/6") 
                                     img(src=`uploads/${propertie.imagen}`, alt=`Imagen propertie ${propertie.title}`)
                                 div(class="sm:w-2/4 md:w-3/6 lg:w-4/6 space-y-3") 
-                                    a(class="block text-2xl font-extrabold text-indigo-600 truncate" href=`/properties/${propertie.id}`)= propertie.title
+                                    a(class="block text-2xl font-extrabold text-blue-600 truncate" href=`/properties/${propertie.id}`)= propertie.title
 
                                     p(class="text-sm text-black font-bold")= propertie.categoria.name
 
@@ -33,7 +33,7 @@ block contenido
                                 div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col lg:flex-row gap-2") 
                                     form(action="#")
                                         input(type="submit" class=`cursor-pointer px-2 md:py-1 text-xs leading-5 font-semibold rounded w-full  ${propertie.publicado ? 'bg-green-100 text-green-800 shadow-md' : 'bg-yellow-100 text-yellow-800 shadow-md'}` value=`${propertie.publicado ? 'Publicado' : 'No publicado'}`)
-                                    a(href=`/properties/edit/${propertie.id}` class="cursor-pointer shadow-md px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-indigo-100 text-indigo-800 text-center") Editar
+                                    a(href=`/properties/edit/${propertie.id}` class="cursor-pointer shadow-md px-2 md:py-1 text-xs leading-5 font-semibold rounded bg-blue-100 text-blue-800 text-center") Editar
 
                                     form(method="POST" action=`/properties/delete/${propertie.id}`)
                                         input(type="hidden" name="_csrf" value= csrfToken)
@@ -53,6 +53,6 @@ block contenido
                         nav(class="relative z-0 inline-flex rounded-md shadow-md") 
                             - var n = 1;
                                 while n <= pages
-                                    a(class=`${actualPage == n ? 'bg-indigo-50 border-indigo-500 text-indigo-600': 'bg-white border-gray-300 text-gray-500 hover:bg-gray-50'} relative inline-flex items-center px-4 py-2 border text-sm font-medium` href=`/my-properties?page=${n}`) #{n++}
+                                    a(class=`${actualPage == n ? 'bg-blue-50 border-blue-500 text-blue-600': 'bg-white border-gray-300 text-gray-500 hover:bg-gray-50'} relative inline-flex items-center px-4 py-2 border text-sm font-medium` href=`/my-properties?page=${n}`) #{n++}
         else 
             p.text-center No hay propiedades
