--- a/views/properties/edit.pug
+++ b/views/properties/edit.pug
@@ -74,7 +74,7 @@ block contenido
                         input(type="hidden" name="lat" id="lat" value= datos.lat ? datos.lat : '')
                         input(type="hidden" name="lng" id="lng" value= datos.lng ? datos.lng : '')
 
-                    input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Guardar Cambios")                        
+                    input(class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Guardar Cambios")                        
 block scripts
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
     script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
