--- a/views/layouts/includes/header-admin.pug
+++ b/views/layouts/includes/header-admin.pug
@@ -1,9 +1,10 @@
 header.bg-blue-600.p-4 
-        .container.mx-auto.flex.justify-between.items-center
+    .container.mx-auto.flex.justify-between.items-center
+        a(cl href="/") 
             h1.text-2xl.text-white.font-extrabold.text-center Bienes
                 span.font-normal Raices
 
-            nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
-                a(href="") Mis propiedades
-                a(href="") Mi perfil
-                a(class="bg-blue-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
+        nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
+            a(href="") Mis propiedades
+            a(href="") Mi perfil
+            a(class="bg-blue-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
