--- a/views/properties/add-image.pug
+++ b/views/properties/add-image.pug
@@ -1,7 +1,7 @@
 extends ../layouts/admin
 
 block styles
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.css")
     meta(name="csrf-token" content= csrfToken)
 block contenido
     div.py-5 
@@ -12,7 +12,7 @@ block contenido
         div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
             form(id="imagen" class="dropzone border-dashed border-2 w-full min:h-96 h-auto rounded flex-col justify-center items-center" method="POST" action=`/properties/add-image/${propertie.id}`)
                 input(type="hidden" name="_csrf" value= csrfToken)
-                
+
 
             button(id="publicar" class="mt-5 w-full py-3 bg-blue-600 hover:bg-blue-700 rounded text-white font-bold uppercase cursor-pointer" type="submit") Publicar Propiedad
 block scripts
