--- a/views/layouts/includes/header-admin.pug
+++ b/views/layouts/includes/header-admin.pug
@@ -5,6 +5,8 @@ header.bg-blue-600.p-4
                 span.font-normal Raices
 
         nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
-            a(href="") Mis propiedades
+            a(href="/my-properties") Mis propiedades
             a(href="") Mi perfil
-            a(class="bg-blue-800 py-2 px-10 rounded-lg" href="") Cerrar sesión
+            form(action="/auth/cerrar-sesion" method="POST")
+                input(type="hidden", name="_csrf" value=csrfToken)
+                input(type="submit" class="bg-blue-800 py-2 px-10 rounded-lg" value="Cerrar Sesión")
