finalización de proyectos y cambios menores

--- a/views/layouts/includes/header-app.pug
+++ b/views/layouts/includes/header-app.pug
@@ -9,7 +9,7 @@ header.bg-blue-600.p-4
             a(href="/auth/login") Iniciar Sesión
 
 div(class="bg-blue-700 py-5 hidden lg:block")
-    div(class="container mx-auto flex justify-between")
+    div(class="container mx-auto px-5 flex justify-between")
         nav(class="flex gap-4 items-center")
             a(href="/categorias/1" class="text-sm font-bold uppercase text-white") Casas
             a(href="/categorias/2" class="text-sm font-bold uppercase text-white") Departamentos
